# spark-llm-deployment-evaluation

./: .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  book.toml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: case-studies.yml  framework-improvements.yml
.github/ISSUE_TEMPLATE/: bug.yml  case-study-submission.yml  framework-feedback.yml
.github/workflows/: check-no-internal.yml  docs-deploy.yml  lint-markdown.yml  python-ci.yml  validate-compose.yml
agent/: README.md  evaluate.py  requirements.txt
agent/core/: __init__.py  framework_loader.py  llm_client.py  orchestrator.py  tools.py
agent/prompts/: stage-1-applying-selection.md  stage-2-channel-research.md  stage-3-applying-quantization.md  stage-4-benchmark-validate.md  stage-5-compare.md  system_prompt.md
agent/schemas/: tool_schemas.json
case-studies/: README.md  _template.md
case-studies/_future-cases/: README.md
case-studies/qwen3.6-35b-a3b-fp8-on-dgx-spark/: 00-summary.md  01-applying-framework-02.md  03-applying-framework-05.md  04-benchmark-results.md  05-decision.md
docs/: glossary.md  index.md
docs/case-studies/: index.md
frameworks/: 01-fp8-vs-nvfp4-decision.md  02-new-model-selection.md  04-new-model-evaluation-channels.md  05-mtp-speculative-decoding.md  how-to-use-these-frameworks.md
scripts/: check-no-internal.sh  sync-book-src.sh
src/: README.md  SUMMARY.md  methodology.md
tests/: conftest.py  test_framework_loader.py  test_orchestrator_dryrun.py  test_tools_sandbox.py
tools/deploy/: launch.sh  (+4 more)
(+41 files in other folders)
