[project]
name = "spark-llm-deployment-evaluation"
version = "0.1.0"
description = "LLM deployment evaluation methodology + agent toolkit"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    "evaluation-runs",
    "book",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
